2004-05-22  Cramblitt <garycramblitt@comcast.net>
        * Change menu item to "Speak Text" on the Tools menu in app-plugins.  Also start KTTSD if it is
          not running.

2004-05-21  Cramblitt <garycramblitt@comcast.net>
        * Bug fix.  Upon startup of kttsmgr, Remove button and Properties tab not enabled despite
          default language selected.
          
2004-05-19  Cramblitt <garycramblitt@comcast.net>
        * Allow kttsmgr screen to be resized as narrow as possible.
        * Correct some mispellings.
        * When calling reinit() pauseText only if isSpeakingText().
        
2004-05-18  Cramblitt <garycramblitt@comcast.net>
        * Reinit() without losing existing queued text jobs, messages, or warnings.
        * When kttsd restarts because of reinit(), job manager part refreshes list.

2004-05-17  Cramblitt <garycramblitt@comcast.net>
        * Fix hang when calling reinit() while speaking.
                        
2004-05-15  Cramblitt <garycramblitt@comcast.net>
        * Lots of changes:
        *   Defined the KDE Text-to-speech API.  See /libktts/kspeech.h.
        *   Moved all the GUI stuff out of KTTSD into kttsmgr.  KTTSD is a pure non-GUI deamon now.
        *   Added text job manager as a KPart (kttsjobmgr) for GUI interface.
        *   Replaced existing configuration manager (kcmkttsd) with kcmkttsmgr, which includes kttsjobmgr.
        *   Fixed several typos and minor bugs.
        *   Fixed Kate and KHTML Plugins.
        *   Updated README, TODO and this file.
        *
        * IMPORTANT note to developers using KTTSD:  The startText, stopText, resumeText DCOP
        *   methods now take a jobNum argument, which you can code as 0 to operate against the last text
        *   job your app queued.  See /plugins/kate-plugin/katekttsd.cpp for example, or /libktts/kspeech.h.
        
2002-11-21  Pupeno  <pupeno@pupeno.com>

	* Full port to the new architecture finished. Some fine tunning still needed.
