@@ -4,7 +4,7 @@ METASOURCES = AUTO
 
 kde_module_LTLIBRARIES =  kcm_kttsmgr.la
 kcm_kttsmgr_la_LDFLAGS = -avoid-version -module -no-undefined 
-kcm_kttsmgr_la_SOURCES = kcmkttsmgr.cpp kcmkttsmgrwidget.ui
+kcm_kttsmgr_la_SOURCES = kcmkttsmgr.cpp kcmkttsmgrwidget.ui kcmkttsmgr.skel
 
 noinst_HEADERS = kcmkttsmgr.h kcmkttsmgrwidget.h kcmkttsmgrwidget.ui.h
 kcm_kttsmgr_la_LIBADD = $(top_builddir)/kttsd/libktts/libktts.la $(top_builddir)/kttsd/libkttsd/libkttsd.la $(LIB_QT) $(LIB_KIO) $(LIB_KDECORE)
