@@ -1,3 +1,6 @@
+2004-05-23  Cramblitt <garycramblitt@comcast.net>
+        * Add option to speak KNotify notifications.
+        
 2004-05-22  Cramblitt <garycramblitt@comcast.net>
         * Change menu item to "Speak Text" on the Tools menu in app-plugins.  Also start KTTSD if it is
           not running.
